sidebar mobile, project-description flow fixed
height changed to min-height: footer was overlapping text

flex-wrap to wrap (so the elements in project-description stack as a column in mobile version)

min-height changed to 80vh to substract title-subtitle height

--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@ html {
   background-size    : cover;
   display            : block;
   width              : 180px;
-  z-index            : 999;
+  z-index            : 99;
 }
 
 .menu ul {
   padding-top : 3rem;
-  padding-left: 0.9rem;
-  font-size   : 1.25rem;
+  padding-left: 0.4rem;
+  font-size   : 1.2rem;
   width       : 100%;
 }
 
@@ -70,6 +70,27 @@ html {
   font-size  : 0.9rem;
   padding-top: 1.5rem;
   color      : darkgray;
+}
+
+.burger {
+  display: none;
+  z-index: 10;
+}
+
+.menu-active {}
+
+.toggle .line1 {
+  -webkit-transform: rotate(45deg) translate(14px, 12px);
+  transform        : rotate(45deg) translate(14px, 12px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  -webkit-transform: rotate(-45deg) translate(14px, -12px);
+  transform        : rotate(-45deg) translate(14px, -12px);
 }
 
 .body {
@@ -205,103 +226,53 @@ html {
   padding-left: 180px;
 }
 @media screen and (max-width: 992px) {
-  body {}
-
-  .title {
-    font-size: 2.3rem;
-  }
-
-  .quote {
-    font-size: 1.5rem;
-  }
-
-  .menu ul {
-    font-size: 1.9rarem;
-  }
-  /* .menu-hide {
-    top: -3em !important;
-  }
-
-  .menu {
-    border-right      : none;
-    border-bottom     : 5px solid black;
-    position          : fixed;
-    top               : 0;
-    right             : 0;
-    left              : 0;
-    width             : auto;
-    height            : 3em;
-    overflow-x        : auto;
-    overflow-y        : hidden;
-    z-index           : 9999;
-    -webkit-box-pack  : center;
-    -ms-flex-pack     : center;
-    justify-content   : center;
-    margin-left       : auto;
-    margin-right      : auto;
-    -webkit-transition: top 0.2s ease-in-out;
-    transition        : top 0.2s ease-in-out;
-  }
-
-  .menu ul {
-    white-space    : nowrap;
-    -ms-flex-pack  : distribute;
-    justify-content: space-around;
-    padding-top    : 0;
-    padding-left   : 0.6em;
-    font-size      : 2em;
-    width          : auto;
-  }
-
-  .menu ul::before {
-    display: inline;
-  }
-
-  .menu ul li {
-    display        : inline;
-    list-style-type: none;
-    padding-right  : 1em;
-  }
-
-  .menu ul li:first-child::before {
-    display  : inline;
-    font-size: 0.8em;
-  }
-
-  .menu ul li:not(:first-child):not(:last-child)::before {
-    display  : inline;
-    font-size: 0.8em;
-  }
-
-  .menu ul li:last-child::before {
-    display  : inline;
-    font-size: 0.8em;
+  html {
+    font-size: 24px;
   }
 
   .body {
     padding-left: 0;
   }
 
-  .carousel-item img {
-    height: 70vh;
+  .menu {
+    width             : 35%;
+    padding-top       : 5%;
+    -webkit-transform : translateX(-100%);
+    transform         : translateX(-100%);
+    -webkit-transition: all 0.3s ease-in;
+    transition        : all 0.3s ease-in;
   }
 
-  .carousel-inner {
-    padding-bottom: 20vh;
+  .menu-active {
+    -webkit-transform: translateX(0);
+    transform        : translateX(0);
   }
 
-  .carousel-caption {
-    position: absolute;
-    bottom  : -20vh;
-    color   : black;
+  .nav-link {
+    opacity: 0;
   }
 
-  .carousel-caption p {
-    font-size: 0.8em;
+  .burger {
+    display         : block;
+    cursor          : pointer;
+    border          : 1px solid white;
+    border-radius   : 5px;
+    background-color: #e6e6e6;
+    padding         : 3px 5px;
+    margin-right    : 30px;
+    z-index         : 9999;
+    position        : fixed;
+    top             : 1em;
+    left            : 1em;
   }
 
-  .carousel-caption h5 {
-    font-size: 1.5em;
+  .burger div {
+    width             : 45px;
+    height            : 3px;
+    background-color  : white;
+    margin            : 15px;
+    -webkit-transition: all 0.3s ease-in;
+    transition        : all 0.3s ease-in;
   }
 
   .projects-display {
@@ -314,6 +285,31 @@ html {
 
   .footer {
     padding-left: 0;
-    font-size   : 0.6em;
-  } */
+  }
+}
+@-webkit-keyframes navLinkFade {
+  from {
+    opacity          : 0;
+    -webkit-transform: translateX(-50px);
+    transform        : translateX(-50px);
+  }
+
+  to {
+    opacity          : 1;
+    -webkit-transform: translateX(0);
+    transform        : translateX(0);
+  }
+}
+@keyframes navLinkFade {
+  from {
+    opacity          : 0;
+    -webkit-transform: translateX(-50px);
+    transform        : translateX(-50px);
+  }
+
+  to {
+    opacity          : 1;
+    -webkit-transform: translateX(0);
+    transform        : translateX(0);
+  }
 }
